feat: Add warehouse CRUD and enhance WarehouseListPage UI
- Backend: Add create/update/delete warehouse methods to InventoryService
- Backend: Add WarehouseResponse DTO for warehouse operations
- Backend: Simplify getStoreStaff to return empty list (mock)
- Backend: Update entity relationships and fix bugs

- Frontend: Add Grid/Table view toggle to WarehouseListPage
- Frontend: Add statistics cards (total, central, store, active)
- Frontend: Add warehouse type filter
- Frontend: Improve CreateWarehouseModal and StockViewModal